--- a/app/src/main/res/layout/activity_register_point.xml
+++ b/app/src/main/res/layout/activity_register_point.xml
@@ -95,6 +95,7 @@
                         android:layout_height="match_parent"
                         android:background="@drawable/back"
                         android:hint="PLNo"
+                        android:inputType="number"
                         android:singleLine="true"
                         android:textAlignment="center"
                         android:textColor="@color/color1"
@@ -117,6 +118,7 @@
                         android:background="@drawable/back"
                         android:enabled="true"
                         android:hint="Patch No"
+                        android:inputType="number"
                         android:singleLine="true"
                         android:textAlignment="center"
                         android:textColor="@color/color1"
@@ -141,6 +143,7 @@
                         android:background="@drawable/back"
                         android:enabled="true"
                         android:hint="Ring No"
+                        android:inputType="number"
                         android:singleLine="true"
                         android:textAlignment="center"
                         android:textColor="@color/color1"
