--- a/app/src/main/res/layout/activity_search_map_file.xml
+++ b/app/src/main/res/layout/activity_search_map_file.xml
@@ -110,9 +110,9 @@
                 android:layout_below="@+id/fb"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="10sp"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:background="@drawable/button_drawable"
-                android:text="CMV and MMV"
+                android:text="CMV &amp; MMV"
                 android:textColor="@color/white"
                 android:textSize="14sp" />
 
@@ -123,14 +123,14 @@
                 android:layout_marginLeft="10sp"
                 android:layout_marginRight="10sp"
                 android:layout_below="@+id/fb"
-                android:layout_weight="2"
+                android:layout_weight="3"
                 android:layout_gravity="center_horizontal"
                 android:background="@drawable/button_drawable"
                 android:text="Next"
                 android:textColor="@color/white"
                 android:textSize="14dp" />
 
-            <Button
+           <!-- <Button
                 android:id="@+id/dwnUpdatedPillar"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
@@ -141,7 +141,7 @@
                 android:background="@drawable/button_drawable"
                 android:text="Point KML"
                 android:textColor="@color/white"
-                android:textSize="14dp" />
+                android:textSize="14dp" />-->
 
 
         </LinearLayout>
