--- a/app/src/main/res/layout/activity_dgpsdata_export.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_export.xml
@@ -14,7 +14,7 @@
         android:layout_weight=".1"
         android:weightSum="1"
         android:orientation="horizontal"
-        android:outlineSpotShadowColor="@color/colorBackground"
+        android:background="@color/colorBackground"
         android:elevation="5dp"
         >
       <!--  <ImageView
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_weight=".8"
             android:textSize="25sp"
-            android:background="@color/exportcolor"
+            android:background="@color/colorBackground"
             android:textColor="@color/offwhite"
             android:gravity="center|left"
             android:paddingLeft="10dp"/>
@@ -39,7 +39,7 @@
             android:id="@+id/img_download"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@color/exportcolor"
+            android:background="@color/colorBackground"
             android:src="@drawable/ic_get_app_black_24dp"
             android:padding="10sp"
             android:layout_weight=".2"/>
