--- a/app/src/main/res/layout/activity_choose_survet_type.xml
+++ b/app/src/main/res/layout/activity_choose_survet_type.xml
@@ -3,118 +3,137 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fitgc_menu_bg"
+    android:background="@drawable/bg"
     tools:context=".MiddleMapListActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:weightSum="4">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:weightSum="1">
 
-        <TextView
-            android:layout_marginTop="50dp"
-            android:layout_weight=".5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Welcome to DGPS Survey of "
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_weight=".5"
-            android:id="@+id/dgpsfbName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:layout_weight="1"
+            android:layout_height="0dp"
+            android:layout_weight=".6"
+            android:orientation="vertical"
             android:weightSum="1">
 
-            <ImageView
-                android:id="@+id/data_point_dwld"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/name_textView"
-                android:layout_weight=".5"
-                android:background="@drawable/downloads"
-                android:clickable="true" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_weight=".3"
+                android:text="Welcome to DGPS Survey of "
+                android:textAlignment="center"
+                android:textColor="@color/color1"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/mapview"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/data_point_dwld"
-                android:layout_weight=".5"
-                android:background="@drawable/map_view"
-                android:clickable="true" />
+            <TextView
+                android:id="@+id/dgpsfbName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight=".3"
+                android:textAlignment="center"
+                android:textColor="@color/color1"
+                android:textSize="25sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:weightSum="1">
+            android:layout_height="0dp"
+            android:layout_weight="3"
+            android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/dataview"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/mapview"
-                android:layout_weight=".5"
-                android:background="@drawable/data_view"
-                android:clickable="true" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-            <ImageView
-                android:id="@+id/exporttofolder"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/dataview"
-                android:layout_weight=".5"
-                android:background="@drawable/export_menu"
-                android:clickable="true" />
+                <ImageView
+                    android:id="@+id/data_point_dwld"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/name_textView"
+                    android:layout_weight=".5"
+                    android:background="@drawable/downloads"
+                    android:clickable="true"
+                    android:elevation="5dp" />
 
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="10dp"
-            android:orientation="horizontal"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:weightSum="1">
+                <ImageView
+                    android:id="@+id/mapview"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/data_point_dwld"
+                    android:layout_weight=".5"
+                    android:background="@drawable/map_view"
+                    android:clickable="true" />
 
-            <ImageView
-                android:id="@+id/synchronize"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/exporttofolder"
-                android:layout_weight=".5"
-                android:background="@drawable/sync"
-                android:clickable="false" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/dataview"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/mapview"
+                    android:layout_weight=".5"
+                    android:background="@drawable/data_view"
+                    android:clickable="true" />
+
+                <ImageView
+                    android:id="@+id/exporttofolder"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/dataview"
+                    android:layout_weight=".5"
+                    android:background="@drawable/tag"
+                    android:clickable="true" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginLeft="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal"
+                android:weightSum="1">
+
+                <ImageView
+                    android:id="@+id/synchronize"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/exporttofolder"
+                    android:layout_weight=".5"
+                    android:background="@drawable/sync"
+                    android:clickable="false" />
+
+                <ImageView
+                    android:id="@+id/exporttoExcel"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/exporttofolder"
+                    android:layout_weight=".5"
+                    android:background="@drawable/export_menu"
+                    android:clickable="false" />
+
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
