--- a/app/src/main/res/layout/activity_dgpssync_menu.xml
+++ b/app/src/main/res/layout/activity_dgpssync_menu.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fitgc_menu_bg"
+    android:background="@drawable/bg"
     tools:context=".MiddleMapListActivity">
 
     <LinearLayout
@@ -26,7 +26,7 @@
                 android:layout_weight=".5"
                 android:text="Data Synchronization of "
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
@@ -36,7 +36,7 @@
                 android:layout_height="0dp"
                 android:layout_weight=".5"
                 android:textAlignment="center"
-                android:textColor="@color/white"
+                android:textColor="@color/colorBackground"
                 android:textSize="25sp"
                 android:textStyle="bold" />
 
