--- a/app/src/main/res/layout/dgps_map_legend.xml
+++ b/app/src/main/res/layout/dgps_map_legend.xml
@@ -22,21 +22,20 @@
         android:textSize="18dp" />
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="400dp"
+        android:layout_height="320dp"
         android:layout_below="@+id/name_textView">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <!--  <TextView
+              <TextView
                   android:id="@+id/textStateBoundary"
                   android:layout_marginTop="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left|center"
-                  android:text="State Boundary"
+                  android:text="Unsurved Point"
                   android:textColor="#000000"
-
                   android:layout_marginLeft="10dip"
                   />
 
@@ -48,16 +47,16 @@
                   android:layout_marginLeft="10dip"
                   android:layout_marginTop="15dip"
                   android:scaleType="fitXY"
-
+                android:src="@drawable/yellow"
                   />
-              &lt;!&ndash;android:src="@drawable/state"&ndash;&gt;
+              <!--android:src="@drawable/state"-->
               <TextView
                   android:id="@+id/textDistrictBoundary"
                   android:layout_marginTop="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left|center"
-                  android:text="Division Boundary"
+                  android:text="Ponits having only attribute data"
                   android:textColor="#000000"
 
                   android:layout_marginLeft="10dip"
@@ -69,75 +68,31 @@
                   android:layout_height="wrap_content"
                   android:layout_marginTop="15dip"
                   android:scaleType="fitXY"
-
+                  android:src="@drawable/red"
                   android:layout_marginLeft="10dip"/>
 
-             &lt;!&ndash; android:src="@drawable/dist"&ndash;&gt;
+             <!-- android:src="@drawable/dist"-->
               <TextView
                   android:id="@+id/textUlbBoundary"
                   android:layout_marginTop="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left|center"
-                  android:text="Range Boundary"
+                  android:text="Points having attribute,Static and RTX data"
                   android:textColor="#000000"
-
                   android:layout_marginLeft="10dip"
                   />
 
               <ImageView
                   android:id="@+id/ulbLegend"
-                  android:layout_width="12dp"
-                  android:layout_height="10dp"
-                  android:layout_below="@+id/textUlbBoundary"
-                  android:layout_marginLeft="10dip"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
                   android:layout_marginTop="15dip"
+                  android:layout_marginLeft="10dip"
                   android:scaleType="fitXY"
-                 />-->
-            <!--  android:src="@drawable/range"-->
-            <!--<TextView
-                android:id="@+id/textSlumBoundary"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:text="CMV Boundry"
-                android:textColor="#000000"
-
-                android:layout_marginLeft="10dip"
-                />
-            <ImageView
-                android:id="@+id/mmv"
-                android:layout_below="@+id/textUlbBoundary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/mmv_legend"
-                android:layout_marginLeft="10dip"/>
-            &lt;!&ndash;  android:src="@drawable/cmv"&ndash;&gt;
-            <TextView
-                android:id="@+id/textHHBoundary"
-                android:layout_marginTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left|center"
-                android:text="MMV Boundary"
-                android:textColor="#000000"
-
-                android:layout_marginLeft="10dip"
-                />
-            <ImageView
-                android:id="@+id/slumLegend"
-                android:layout_below="@+id/textUlbBoundary"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dip"
-                android:scaleType="fitXY"
-                android:src="@drawable/cmv_legend"
-                android:layout_marginLeft="10dip"/>-->
-
-            <!--android:src="@drawable/mmv"-->
+                  android:layout_below="@+id/textUlbBoundary"
+                  android:src="@drawable/green"
+                 />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
