--- a/app/src/main/res/layout/activity_dgpsdata_collect.xml
+++ b/app/src/main/res/layout/activity_dgpsdata_collect.xml
@@ -479,9 +479,9 @@
                         app:ms_enableFloatingLabel="true"
                         app:ms_errorColor="@color/red"
                         app:ms_floatingLabelColor="@color/color1"
-                        app:ms_floatingLabelText="Duration"
+                        app:ms_floatingLabelText="Direction"
                         app:ms_highlightColor="@color/color1"
-                        app:ms_hint="Select Duration"
+                        app:ms_hint="Select Direction"
                         app:ms_hintTextSize="15sp"
                         app:ms_hintColor="@color/color1"
                         app:ms_hintView="@layout/hint_item_layout"
