--- a/app/src/main/res/layout/activity_middle_map_list.xml
+++ b/app/src/main/res/layout/activity_middle_map_list.xml
@@ -9,70 +9,161 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
         android:orientation="vertical"
-        >
+        android:weightSum="2">
 
-<!--    <LinearLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.2"
+        android:layout_weight=".3"
         android:orientation="vertical"
-        android:weightSum="3">-->
+        android:weightSum=".6">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight=".3"
+            android:text="Welcome to FRJVC Survey of "
+            android:textAlignment="center"
+            android:textColor="@color/color1"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/dgpsfbName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight=".3"
+            android:textAlignment="center"
+            android:textColor="@color/color1"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:weightSum="2"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:weightSum="8">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
+            <!---->
 
             <ImageView
                 android:id="@+id/mapview"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@+id/name_textView"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_weight="2"
-                android:background="@drawable/menu_1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/data_point_dwld"
+                android:layout_weight=".5"
+                android:background="@drawable/map_view"
                 android:clickable="true" />
 
             <ImageView
                 android:id="@+id/dataview"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/mapview"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_weight="2"
-                android:background="@drawable/menu_2"
+                android:layout_weight=".5"
+                android:background="@drawable/data_view"
                 android:clickable="true" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="1">
+
 
             <ImageView
                 android:id="@+id/sync"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
                 android:layout_below="@+id/dataview"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_weight="2"
-                android:background="@drawable/menu_3"
+                android:layout_weight=".5"
+                android:background="@drawable/export_menu"
                 android:clickable="true" />
+
             <ImageView
-                android:id="@+id/download"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_below="@+id/sync"
-                android:layout_marginLeft="22dp"
-                android:layout_marginTop="22dp"
-                android:layout_marginRight="22dp"
-                android:layout_marginBottom="22dp"
-                android:layout_weight="2"
-                android:background="@drawable/download_point_data"
-                android:clickable="false" />
+                android:id="@+id/data_point_dwld"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/name_textView"
+                android:layout_weight=".5"
+                android:background="@drawable/downloads"
+                android:clickable="true"
+                android:elevation="5dp" />
 
         </LinearLayout>
+    </LinearLayout>
+    </LinearLayout>
+    <!--<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="8">
+
+        &lt;!&ndash;<ImageView
+            android:id="@+id/mapview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/name_textView"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginRight="22dp"
+            android:layout_weight="2"
+            android:background="@drawable/menu_1"
+            android:clickable="true" />
+
+        <ImageView
+            android:id="@+id/dataview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/mapview"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginRight="22dp"
+            android:layout_weight="2"
+            android:background="@drawable/menu_2"
+            android:clickable="true" />
+
+        <ImageView
+            android:id="@+id/sync"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/dataview"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginRight="22dp"
+            android:layout_weight="2"
+            android:background="@drawable/menu_3"
+            android:clickable="true" />
+        <ImageView
+            android:id="@+id/download"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_below="@+id/sync"
+            android:layout_marginLeft="22dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginRight="22dp"
+            android:layout_marginBottom="22dp"
+            android:layout_weight="2"
+            android:background="@drawable/download_point_data"
+            android:clickable="false" />&ndash;&gt;
+
+    </LinearLayout>-->
 </RelativeLayout>
